force-app/main/default/objects/Asset/fields/Alpha__c.field-meta.xml
<CustomField>
    <fullName>Alpha__c</fullName>
    <label>Alpha</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>