force-app/main/default/objects/Asset/fields/Beta__c.field-meta.xml
<CustomField>
    <fullName>Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta</label>
    <type>Checkbox</type>
</CustomField>