force-app/main/default/objects/Asset/fields/Gamma__c.field-meta.xml
<CustomField>
    <fullName>Gamma__c</fullName>
    <label>Gamma</label>
    <length>18</length>
    <type>Text</type>
</CustomField>